--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "tempo",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "dependencies": {
-    "bootstrap": "3.3.4"
+    "jquery": "2.1.4",
+    "bootstrap": "3.3.4",
+    "backbone": "1.2.0"
   }
 }
